--- a/accellera-style-guide/02.md
+++ b/accellera-style-guide/02.md
@@ -6,7 +6,13 @@ style: chapter
 
 This chapter explains the project setup and use of the GitHub repository for technical documentation.
 
-## 2.1 GitHub repository setup
+## 2.1 Tool setup
+
+[Annex A](a.html) explains the installation of a virtual machine, the Xubuntu operating system, and the packages required to publish documents. 
+
+Note that this tool setup is only required for the publication of standard documents, which is the responsibility of the technical editor. For document editing and authoring, access to the GitHub project and availability of a simple ASCII editor is sufficient.
+
+## 2.2 GitHub repository setup
 
 It is recommended to use a dedicated GitHub repository to develop a single standard book. Please contact the Technical Committee chair to request a new repository for the technical documentation. After this, a new GitHub repository is created, including the installation of default templates and scripts to generate an IEEE SA stylesheet compatible standards document.
 
@@ -44,7 +50,7 @@ It is recommended to use a dedicated GitHub repository to develop a single stand
 
 In addition, the root directory also contains some configuration settings to enable flow installation, automation and/or deployment. Normally technical editor(s) do not have to change these files.
 
-## 2.2 Accellera standard template
+## 2.3 Accellera standard template
 
 The directory containing the Accellera standard template is called `accellera-standard-template`. This directory will contain the document source files in Markdown format, as well as the default images and stylesheets. The metadata for the Accellera standard template is located in directory `_data/works/accellera-standard-template/`.
 
@@ -67,11 +73,14 @@ The directory containing the Accellera standard template is called `accellera-st
 "
 %}
 
-When starting with the technical editing of a new standard, it is recommended to copy the template and metadata directories to new directories reflecting the name of the new standard document. 
+When starting with the technical editing of a new standard, it is recommended use the Accellera standard template as boilerplate code for the creation of the new standard document. This can be done as follows:
 
+```
+$ cd tc-documentation   # or working group specific documentation repository
+$ npm run eb -- new --book accellera-standard-template --name <name-of-standard>
+```
 
-## 2.3 Tool setup
+After this, the metadata for the new standard document can be found in `_data/works/<name-of-standard>/default.yml` and the actual source files are located in the directory `<name-of-standard>`. 
 
-[Annex A](a.html) explains the installation of a virtual machine, the Xubuntu operating system, and the packages required to publish documents. 
-
-Note that this tool setup is only required for the publication of standard documents, which is the responsibility of the technical editor. For document editing and authoring, access to the GitHub project and availability of a simple ASCII editor is sufficient.
+NOTE---For the development of an IEEE-SA standard, the template `ieee-sa-standard-template` can be used instead.
+{:.note}
